add subscribe to mobile header and remove breadcrumbs for now

--- a/layouts/partials/marquee.html
+++ b/layouts/partials/marquee.html
@@ -17,12 +17,11 @@
     {{ end }}
   </div>
   {{ end }}
-
-  {{ if eq .Kind "page" }}
+  <!-- {{ if eq .Kind "page" }}
     {{ partial "breadcrumb" . }}
-  {{ end }}
+  {{ end }} -->
   <div class="flex align-center">
-    <a class="button" href="/subscribe" title="Subscribe to the Blog">Subscribe Free</a>
+    <a class="button" href="/subscribe/" title="Subscribe to the Blog">Subscribe Free</a>
 
     <div id="day-or-night" class="color-scheme">
       <button id="day-mode" title="Day Mode">
