--- a/layouts/partials/site-header.html
+++ b/layouts/partials/site-header.html
@@ -4,18 +4,21 @@
 			<svg class="spin-hover"><use xlink:href="#icon-sK"></svg>
 		</a>
 
-		<nav class="navis"><a href="#site-navigation" class="button" title="Navigate the Site">Menu</a></nav>
+		<nav class="navis">
+			<a class="button" href="/subscribe/" style="margin-right: 0;" title="Subscribe to the Blog">Subscribe</a>
+			<a href="#site-navigation" class="button" title="Navigate the Site">Menu</a>
+		</nav>
 
 		<nav id="masthead--nav" class="sK-nav">
-			<a href="/popular" title="Popular" rel="navigation" onClick="gtag('event', 'Popular - Header');">
+			<a href="/popular/" title="Popular" rel="navigation" onClick="gtag('event', 'Popular - Header');">
 				<svg class="spin-hover"><use xlink:href="#icon-heartbeat"></svg>
 				<span>Popular</span>
 			</a>
-			<a href="/all" title="Fresh" rel="navigation" onClick="gtag('event', 'Fresh - Header');">
+			<a href="/all/" title="Fresh" rel="navigation" onClick="gtag('event', 'Fresh - Header');">
 				<svg class="spin-hover"><use xlink:href="#icon-air-freshener"></svg>
 				<span>Fresh</span>
 			</a>
-			<a href="/sections" title="Sections" rel="navigation" onClick="gtag('event', 'Sections - Header');">
+			<a href="/sections/" title="Sections" rel="navigation" onClick="gtag('event', 'Sections - Header');">
 				<svg class="spin-hover"><use xlink:href="#icon-couch"></svg>
 				<span>Sections</span>
 			</a>
@@ -23,15 +26,15 @@
 				<svg class="spin-hover"><use xlink:href="#icon-prescription-bottle-alt"></svg>
 				<span>Subscribe</span>
 			</a> -->
-			<a href="/books" title="Books" rel="navigation" onClick="gtag('event', 'Books - Header');">
+			<a href="/books/" title="Books" rel="navigation" onClick="gtag('event', 'Books - Header');">
 				<svg class="spin-hover"><use xlink:href="#icon-books"></svg>
 				<span>Books</span>
 			</a>
-			<a href="/about" title="About" rel="navigation" onClick="gtag('event', 'About - Header');">
+			<a href="/about/" title="About" rel="navigation" onClick="gtag('event', 'About - Header');">
 				<svg class="spin-hover"><use xlink:href="#icon-pencil-alt"></svg>
 				<span>About</span>
 			</a>
-			<a href="/contact" title="Say Hi" rel="navigation" onClick="gtag('event', 'Say Hi - Header');">
+			<a href="/contact/" title="Say Hi" rel="navigation" onClick="gtag('event', 'Say Hi - Header');">
 				<svg class="spin-hover"><use xlink:href="#icon-kiss-wink-heart"></svg>
 				<span>Say Hi</span>
 			</a>
