--- a/layouts/partials/site-footer.html
+++ b/layouts/partials/site-footer.html
@@ -67,7 +67,7 @@
 				<span>Say Hi</span>
 			</a>
 			<a href="/subscribe" title="Subscribe" rel="navigation" onClick="gtag('event', 'Subscribe - Footer');">
-				<svg class="spin-hover"><use xlink:href="#icon-prescription-bottle-alt"></svg>
+				<svg class="spin-hover"><use xlink:href="#icon-subscribe"></svg>
 				<span>Subscribe</span>
 			</a>
 		</nav><!--/mastheadnav-->
