--- a/assets/sass/site/primary/_posts-and-pages.scss
+++ b/assets/sass/site/primary/_posts-and-pages.scss
@@ -343,6 +343,7 @@
 	margin:4vw auto;
 	position: relative;
 	width: 92vw;
+	padding-left: 5vw;
 
 	h2 {
 		padding: 1em 0;
@@ -395,7 +396,7 @@
 		z-index: 0;
 
 		svg {
-			width:8vw;
+			width:10vw;
 			height:auto;
 			display:block;
 		}
