--- a/layouts/index.rss.xml
+++ b/layouts/index.rss.xml
@@ -1,6 +1,6 @@
 <rss version="2.0" xmlns:atom="http://www.w3.org/2005/Atom" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:media="http://search.yahoo.com/mrss/">
   <channel>
-    <title>It's Pronounced Metrosexual</title>
+    <title>{{ .Site.Title }}</title>
     <link>{{ .Permalink }}</link>
     <description>{{ .Site.Params.description }}</description>
     <generator>Hugo -- gohugo.io</generator>{{ with .Site.LanguageCode }}
