lower the contrast a tiny bit for more pleasant reading

--- a/assets/sass/variables-site/_colors.scss
+++ b/assets/sass/variables-site/_colors.scss
@@ -17,9 +17,9 @@ $grey: 				#9c9c9c;
 $color__primary: $purple;
 
 :root {
-	--bg-color: #fff;
-	--bg-faint: #eaeaea;
-	--bg-mask: rgba(255,255,255,.7);
+	--bg-color: rgb(240,240,240);
+	--bg-faint: #fff;
+	--bg-mask: rgba(240,240,240,.7);
 	--text-color: #0e0028;
 	--text-color-reverse: #fff;
 }
