fix fresh link and some color vibrations

--- a/assets/sass/variables-site/_colors.scss
+++ b/assets/sass/variables-site/_colors.scss
@@ -1,7 +1,7 @@
 $blue:				#567dff;
 $light-blue:	#4ecaff;
 $green:				#46ca51;
-$light-green:	rgb(166, 231, 97);	
+$light-green:	rgb(160, 231, 84);	
 $yellow-green:rgb(208, 224, 28);
 $orange:			#ff8229;
 $light-orange:#ffb516;
@@ -10,7 +10,7 @@ $red:					#ff3737;
 $pink: 				#FF529D;
 $violet:			#8154fd;
 $fuschia:			#f82eff;
-$purple:			#BD66FF;
+$purple:			rgb(181, 101, 243);
 $teal:				#00c9b5;
 $grey: 				#9c9c9c;
 
