--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -15,10 +15,10 @@
 	<script>
 	let root = document.documentElement;
 	if(localStorage.getItem("colorScheme")==="night") {
-		root.style.setProperty('--bg-color', 'black');
-		root.style.setProperty('--text-color', '#ddd');
-		root.style.setProperty('--bg-faint', '#222222');
-		root.style.setProperty('--bg-mask', 'rgba(0,0,0,.78)');
+		root.style.setProperty('--bg-color', 'rgb(15,15,15)');
+    root.style.setProperty('--text-color', '#f9f7fc');
+    root.style.setProperty('--bg-faint', 'rgb(35,35,35)')
+    root.style.setProperty('--bg-mask', 'rgba(15,15,15,.7)')
 	} 
 	</script>
 	<meta charset="utf-8">
