--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -44,17 +44,20 @@
 	<meta property="og:site_name" content="{{ .Site.Title }}"/>
 	<meta property="og:url" content="{{ .Permalink }}"/>
 	<meta property="og:locale" content="en">
+	{{- $featuredImg := (.Resources.ByType "image").GetMatch "*featured*" -}}
 	{{- if .Params.og_image }}
 	<meta property="og:image" content="{{ .Params.og_image | absURL }}"/>
 	<meta property="og:image:secure_url" content="{{ .Params.og_image | absURL }}"/>
 	{{ else if .Params.featured_image }}
 	<meta property="og:image" content="{{ .Params.featured_image | absURL }}"/>
 	<meta property="og:image:secure_url" content="{{ .Params.featured_image | absURL }}"/>
+	{{ else if $featuredImg }}
+	<meta property="og:image" content="{{ $featuredImg.Permalink }}"/>
+	<meta property="og:image:secure_url" content="{{ $featuredImg.Permalink }}"/>
 	{{ else }}
 	<meta property="og:image" content="{{ .Site.Params.og_image | absURL }}"/>
 	<meta property="og:image:secure_url" content="{{ .Site.Params.og_image | absURL }}"/>
 	{{ end -}}
-
 	<!-- Twitter Card Meta -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@actuallymetro">
@@ -64,6 +67,8 @@
 	<meta property="twitter:image" content="{{ .Params.og_image | absURL }}"/>
 	{{ else if .Params.featured_image }}
 	<meta property="twitter:image" content="{{ .Params.featured_image | absURL }}"/>
+	{{ else if $featuredImg }}
+	<meta property="twitter:image" content="{{ $featuredImg.Permalink }}"/>
 	{{ else }}
 	<meta property="twitter:image" content="{{ .Site.Params.og_image | absURL }}"/>
 	{{ end -}}
