--- a/layouts/partials/seo-schema.html
+++ b/layouts/partials/seo-schema.html
@@ -1,4 +1,17 @@
 <script type="application/ld+json">
+{{ if .IsHome }}
+{
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "{{ .Site.Params.header }}",
+    "url": "{{ .Site.Params.baseURL }}",
+    "sameAs": [
+        "https://www.facebook.com/{{ .Site.Params.facebook }}",
+        "https://www.instagram.com/{{ .Site.Params.instagram }}",
+        "https://twitter.com/{{ .Site.Params.twitter }}",
+        "https://github.com/{{ .Site.Params.github }}"
+    ]
+}{{ else }}
 {
     "@context" : "http://schema.org",
     "@type" : "BlogPosting",
@@ -9,7 +22,6 @@
     "articleSection" : "{{ if .Params.categories }}{{ index .Params.categories 0 }}{{ end }}",
     "name" : "{{ if .Params.seo_title }}{{ .Params.seo_title }}{{ else }}{{ .Title }}{{ end }}",
     "headline" : "{{ .Title }}",
-    "image" : {{ if .Params.featured_image }}"{{ .Params.featured_image | absURL }}"{{ else}}{{ $img := (.Resources.ByType "image").GetMatch "*featured*" }}{{ with $img }}"{{ $img.Permalink }}"{{ end }}{{ end }},
     "description" : "{{ if .Description }}{{ .Description }}{{ else if .Params.excerpt }}{{ .Params.excerpt }}{{ else if .IsPage}}{{ .Summary }}{{ else }}{{ .Site.Params.description }}{{ end }}",
     "inLanguage" : "en-US",
     "author" : "{{ range .Site.Author }}{{ . }}{{ end }}",
@@ -23,16 +35,5 @@
     "url" : "{{ .Permalink }}",
     "wordCount" : "{{ .WordCount }}",
     "keywords" : [ {{ if isset .Params "topics" }}{{ range .Params.topics }}"{{ . }}",{{ end }}{{ end }}"Sam Killermann","Sam Killerman","Sam Killermann Blog","Social Justice","Better Humaning","Technolophizing","Creastinating"],
-} {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "{{ .Site.Params.header }}",
-    "url": "{{ .Site.BaseURL }}",
-    "sameAs": [
-      "https://www.facebook.com/{{ .Site.Params.facebook }}",
-      "https://www.instagram.com/{{ .Site.Params.instagram }}",
-      "https://twitter.com/{{ .Site.Params.twitter }}",
-      "https://github.com/{{ .Site.Params.github }}"
-    ]
-  }
+}{{ end }}
 </script>
