--- a/assets/sass/site/primary/_posts-and-pages.scss
+++ b/assets/sass/site/primary/_posts-and-pages.scss
@@ -167,7 +167,7 @@
 			margin-top: -4vw;
 
 			img {
-				opacity: .7;
+				opacity: .8;
 			}
 		}
 	}
@@ -261,8 +261,11 @@
 		justify-content: space-between;
 		font-size: calc(.8rem + .2vw);
 		line-height: 1;
-		opacity: .65;
 		margin-bottom: 1.666rem;
+
+		.reply, .image-cred, .reading-time {
+			opacity: .65;
+		}
 
 		a {
 			border: none;
