--- a/assets/sass/site/primary/_posts-and-pages.scss
+++ b/assets/sass/site/primary/_posts-and-pages.scss
@@ -263,7 +263,7 @@
 		line-height: 1;
 		margin-bottom: 1.666rem;
 
-		.reply, .image-cred, .reading-time {
+		.replies-open, .image-cred, .reading-time {
 			opacity: .65;
 		}
 
