--- a/assets/sass/site/primary/_posts-and-pages.scss
+++ b/assets/sass/site/primary/_posts-and-pages.scss
@@ -103,14 +103,18 @@
 .cat-links, .tags-links {
 
 	a {
-		margin:0 .15em 0 0;
+		margin:0 .2em 0 0;
 		text-decoration:none;
+		display: inline-block;
+		line-height: 48px;
+		border: none;
 	}
 
 	a:before {
 		display:inline;
 		content:'#';
 		margin-right:1px;
+		@extend .chameleon-color;
 	}
 }
 
