--- a/assets/sass/elements/_blocks.scss
+++ b/assets/sass/elements/_blocks.scss
@@ -20,7 +20,7 @@
 	width:100%;
 }
 
-p.has-drop-cap {
+.dropcap {
 	margin-top: 3em;
 	position: relative;
 
@@ -28,7 +28,7 @@ p.has-drop-cap {
 		font-size: 5em;
 		line-height: 1;
 		float: left;
-		font-weight: 900;
+		font-weight: 800;
 		margin: .05em .3em 0 0;
 		font-family: $font__theme;
 	}
