add legal stuff to footer

--- a/layouts/partials/site-footer.html
+++ b/layouts/partials/site-footer.html
@@ -111,5 +111,12 @@
 				</article>
 			</div>
 		</div>-->
+		<div class="pad">
+			<p class="text-wrap" style="text-align: center; margin: 1em auto;">
+				<a href="https://github.com/killermann/samk.blog" title="Sam Killermann's Blog Repository on Github">This Blog is Open Source</a>&nbsp;&nbsp;|&nbsp;&nbsp; 
+				<a href="/terms">Terms &amp; Conditions</a>&nbsp;&nbsp;|&nbsp;&nbsp; 
+				<a href="/privacy">Privacy Policy</a> 
+			</p>
+		</div>
 	</section><!--/inner-->
 </footer><!-- #colophon -->
