add SJMD Book footer

--- a/assets/sass/variables-site/_colors.scss
+++ b/assets/sass/variables-site/_colors.scss
@@ -1,8 +1,8 @@
 $blue:				#567dff;
 $light-blue:	#4ecaff;
-$green:				#46ca51;
-$light-green:	rgb(160, 231, 84);	
-$yellow-green:rgb(208, 224, 28);
+$green:				#2aca38;
+$light-green:	rgb(143, 218, 64);	
+$yellow-green:rgb(200, 214, 40);
 $orange:			#ff8229;
 $light-orange:#ffb516;
 $bright-red:	#ff5739;
