--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -54,11 +54,53 @@
 			<span class="tags-links"><a href="/topics/{{ . | urlize }}">{{ . }}</a></span>
 			{{ end }}
 		</p>
-		{{- if .Params.discussionId }}
-		<a class="replies-open" href="#reply">Replies open &darr;</a>
-		{{ end -}}
 	</footer>
 </article>
+{{ if in .Params.topics "SJMD Book"}}
+<style type="text/css">
+
+#sjmd-book-sign-up {
+	margin: 0 auto 4vw;
+	background: var(--bg-faint);
+	padding: 4vw;
+}
+
+#sjmd-book-sign-up .icon {
+	font-size: 5em;
+	line-height: 1;
+	margin-bottom: 1rem;
+	display: inline-block;
+}
+
+#sjmd-book-sign-up p {
+	margin: 0 auto 1.666rem;
+}
+
+#sjmd-book-sign-up p.small {
+	margin: 0;
+	font-size: 1rem;
+	line-height: 1.2;
+}
+
+#sjmd-book-sign-up .button {
+	padding: 1.333rem;
+	display: block;
+}
+
+</style>
+<section id="sjmd-book-sign-up">
+	<div class="text-wrap">
+		<p>
+			👋 Hey! This essay is part of a book that I'm currently writing (publicly!) about <a href="/topics/sjmd-book">Social Justice, Minus Dogma</a>. All through January, I'll publishing a chapter each day until it's done. <strong>Do you want to join the list for updates?</strong>
+		</p>
+		<p>
+			<a class="button" href="https://hues.ck.page/353dcc23a0" target="_blank" rel="noopener noreferrer">Sign me up.</a>
+		</p>
+		
+		<p class="small">You can choose your level of update (from one email every time I publish a new essay, to just getting a single email when the book is published)</p>
+	</div>
+</section>
+{{ else }}
 <div id="heart-sK">
 	<a href="https://www.samuelkillermann.com" title="Created by Sam Killermann" target="_blank" rel="noreferrer noopener"><svg class="animated-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 133.83 66.6"><path stroke-width="5" fill="none" id="heart" d="M22,36.39S20.5,26.67,11.64,23.5s-12.6,3.94-3,16.8S23.61,63.9,23.2,54.23,22.48,20.75,34.14,9.61C43.25.9,51.06,5.09,50.45,17.53c-.76,15.4-20.05,37.6-20.05,37.6"/><path stroke-width="5" fill="none" id="sK" d="M63,36.06a15.16,15.16,0,0,0-11-5.5C44,30.15,37.8,37,54.4,49.41s-19,22.07-11.93,4.84C46.05,45.53,58.78,34.86,64.77,24,71.94,11,74.91-2.56,73.24,5.35c-3.07,14.52-3.71,54.27-3.13,51.17,4.08-21.92,33.81-52.2,31-50.35S69.39,35.07,74.91,33.64,129,21.09,130.83,24.16"/></svg></a>
 </div>
@@ -82,6 +124,7 @@
 		<svg class="chameleon-color"><use xlink:href="#icon-subscribe"></svg>
 	</div>
 </section>
+{{ end }}
 {{- if .Params.discussionId }}
 <section id="reply" class="pad">
 <style type="text/css">
