--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -79,7 +79,7 @@
 #sjmd-book-sign-up p.small {
 	margin: 0;
 	font-size: 1rem;
-	line-height: 1.2;
+	line-height: 1.44;
 }
 
 #sjmd-book-sign-up .button {
@@ -97,7 +97,7 @@
 			<a class="button" href="https://hues.ck.page/353dcc23a0" target="_blank" rel="noopener noreferrer">Sign me up.</a>
 		</p>
 		
-		<p class="small">You can choose your level of update (from one email every time I publish a new essay, to just getting a single email when the book is published)</p>
+		<p class="small">You can choose your level of update-ness (from one email every time I publish a new essay, to just getting a single email when the book is published)</p>
 	</div>
 </section>
 {{ else }}
