--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -73,7 +73,7 @@
 }
 
 #sjmd-book-sign-up p {
-	margin: 0 auto 1.666rem;
+	margin: 0 auto 2rem;
 }
 
 #sjmd-book-sign-up p.small {
@@ -83,8 +83,7 @@
 }
 
 #sjmd-book-sign-up .button {
-	padding: 1.333rem;
-	margin-top: 2vw;
+	padding: 1rem;
 	display: block;
 }
 
@@ -95,7 +94,7 @@
 			👋 Hey! This essay is part of a book that I'm currently writing (publicly!) about <a href="/topics/sjmd-book">Social Justice, Minus Dogma</a>. All through January, I'll be publishing a chapter a day until it's done. <strong>Do you want to join the list for updates?</strong>
 		</p>
 		<p>
-			<a class="button" href="https://hues.ck.page/353dcc23a0" target="_blank" rel="noopener noreferrer">Sign me up.</a>
+			<a class="button" href="https://hues.ck.page/353dcc23a0" target="_blank" rel="noopener noreferrer">How do I sign up?</a>
 		</p>
 		
 		<p class="small">You can choose your level of update-ness (from one email every time I publish a new essay, to just getting a single email when the book is published)</p>
