mention daily blogging in home intro

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,12 +1,18 @@
 {{ define "main" }}
 <style type="text/css">
 .home-intro {
-	font-size: 1.4em;
+	font-size: 1.333em;
 	line-height: 1.444;
+	font-weight: 800;
+	margin: 0 auto 1em;
 }
 </style>
-<header class="archive-header">
-	<h1 class="home-intro wrap" style="text-align: center; padding: 0 4vw; margin: 1em auto 0;">Welcome! <a href="/about/sam-killermann">I'm sK.</a> I blog about <a href="/categories/better-humaning">better humaning</a>, <a href="/categories/technolophizing">technolophizing</a> &amp; <a href="/categories/adventravel">adventravel</a>, exploring themes like <a href="/topics/unhappiness">(un)happiness</a>, <a href="/topics/fear">fear</a>, <a href="/topics/activism">activism</a>, <a href="/topics/mindfulness">mindfulness</a>, &amp; <a href="/topics/" title="All Tags">more</a>. I'm happy you're here.</h1>
+<header class="home-header pad" style="padding-bottom: 0;">
+	<h1 class="home-intro wrap"><span class="chameleon-color">Welcome!</span> 
+		<a href="/about/sam-killermann">I'm sK.</a> I mostly blog about <a href="/categories/better-humaning">better humaning</a>, <a href="/categories/technolophizing">technolophizing</a>, <a href="/categories/work-dot-com/">work dot com</a> &amp; <a href="/categories/adventravel">adventravel</a>, exploring themes like <a href="/topics/unhappiness">(un)happiness</a>, <a href="/topics/fear">fear</a>, <a href="/topics/activism">activism</a>, <a href="/topics/mindfulness">mindfulness</a>, &amp; <a href="/topics/" title="All Tags">more</a>. 
+	</h1>
+	<p class="home-intro wrap"><span class="chameleon-color">Right now,</span> I'm in the process of publicly writing <a href="/topics/sjmd-book" title="Social Justice, Minus Dogma Book Entries">a book about dogmatic activism</a>, with a new post every day. You can get <a href="https://bit.ly/sjmdbook" target="_blank" rel="noopener noreferrer">email updates</a> on just that, if you'd like.</p>
+	<p class="home-intro wrap" style="margin-bottom: 0;">I'm happy you're here.</p>
 </header>
 <section class="section-main">
 	<div class="loop">
