Publish "Literal Transphobia"

--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -27,6 +27,8 @@
     --primary-text-color: var(--text-color);
     --secondary-text-color: var(--text-color);
     --primary-bg-color: var(--bg-faint);
+    --secondary-bg-color: var(--bg-faint);
+    --secondary-bg-color-lighter: var(--bg-faint);
   }
   </style>
   <script>
