--- a/assets/sass/variables-site/_colors.scss
+++ b/assets/sass/variables-site/_colors.scss
@@ -10,7 +10,7 @@ $red:					#ff3737;
 $pink: 				#FF529D;
 $violet:			#8154fd;
 $fuschia:			#f82eff;
-$purple:			rgb(181, 101, 243);
+$purple:			#B565F3;
 $teal:				#00c9b5;
 $grey: 				#9c9c9c;
 
