--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -26,9 +26,9 @@
 			{{ else }}
 				{{ $img := (.Resources.ByType "image").GetMatch "*featured*" }}
 					{{ with $img }}
-						{{ $big := $img.Resize "1400x 	" }}
-						{{ $small := $img.Resize "600x 	" }}
-							<img srcset="{{ $small.RelPermalink }} 1x, {{ $big.RelPermalink }} 2x" alt="{{ $img.Title }}" />
+						{{ $big := $img.Resize "1400x"}}
+						{{ $small := $img.Resize "600x"}}
+							<img srcset="{{ $small.RelPermalink }} 500w, {{ $big.RelPermalink }} 1200w" alt="{{ $img.Title }}" />
 					{{ end }}
 			{{ end }}
 		</div>
