--- a/layouts/partials/card.html
+++ b/layouts/partials/card.html
@@ -33,7 +33,7 @@
 					{{ with $img }}
 						{{ $big := $img.Resize "1400x" }}
 						{{ $small := $img.Resize "600x" }}
-							<img loading="lazy" class="lazy-load" src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAQAAABeK7cBAAAADUlEQVR42mP8X8/AAAAFgwGANbMDjQAAAABJRU5ErkJggg==" data-srcset="{{ $small.RelPermalink }} 1x, {{ $big.RelPermalink }} 2x" alt="{{ $img.Title }}" />
+							<img loading="lazy" class="lazy-load" src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAABCAQAAABeK7cBAAAADUlEQVR42mP8X8/AAAAFgwGANbMDjQAAAABJRU5ErkJggg==" data-srcset="{{ $small.RelPermalink }} 500w, {{ $big.RelPermalink }} 1200w" alt="{{ $img.Title }}" />
 					{{ end }}
 				{{ end }}
 			</div>
