publish "Trickle-down Social Justice"

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -91,7 +91,7 @@
 <section id="sjmd-book-sign-up">
 	<div class="text-wrap">
 		<p>
-			👋 Hey! This essay is part of a book that I'm currently writing (publicly!) about <a href="/topics/sjmd-book">Social Justice, Minus Dogma</a>. All through January, I'll be publishing a chapter a day until it's done. <strong>Do you want to join the list for updates?</strong>
+			👋 Hey! This essay is part of a book that I'm currently writing (publicly!) about <a href="/topics/sjmd-book">Social Justice, Minus Dogma</a>. All through January, I'll be writing and publishing an entry a day until it's done. <strong>Do you want to join the list for updates?</strong>
 		</p>
 		<p>
 			<a class="button" href="https://hues.ck.page/353dcc23a0" target="_blank" rel="noopener noreferrer">How do I sign up?</a>
