--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -93,8 +93,12 @@
 		<p>
 			👋 Hey! This is part of a book that I'm currently writing (publicly!) about <a href="/topics/sjmd-book">Social Justice, Minus Dogma</a>. All through January, I'll be writing and publishing an entry a day until it's done. <strong>Do you want to join the list for updates?</strong>
 		</p>
+		
 		<p>
 			<a class="button" href="https://hues.ck.page/353dcc23a0" target="_blank" rel="noopener noreferrer">How do I sign up?</a>
+		</p>
+		<p>
+			<strong>You'll get the first 294 pages 👀 of the work-in-progress book (as of Jan. 26th) as a free downloadable .PDF 📩</strong>
 		</p>
 		
 		<p class="small">You can choose your level of update-ness (from one email every time I publish a new essay, to just getting a single email when the book is published)</p>
